# immo

./: .env.example  .env.local.example  .gitignore  A-FAIRE.md  ANALYSE_CONTRAT_SOLANA.md  AUDIT_CONTRATS_COMPLET.md  AUDIT_TODO.md  CANTOR_VAULT_ARCHITECTURE.md  CHANGES.md  CORRECTIONS_APPLIQUEES.md  CORRECTIONS_FRONTEND.md  Cargo.toml  DATA_MAPPING.md  DONNEES_MANQUANTES_CONTRAT.md  FINAL_FIXES.md  GUIDE_DEPLOIEMENT_DEVNET.md  GUIDE_STOCKAGE_IMAGES.md  GUIDE_TESTS.md  INFRASTRUCTURE_COMPLETE.md  IPFS_FLOW_DOCUMENTATION.md  LIQUIDATION_GUIDE.md  README.md  README_TESTS.md  SMART_CONTRACTS.md  VERIFICATION.md  debug-reader.js  debug-rpc.js  debug-vault-raw.js  next.config.js  next.config.ts  package-lock.json  package.json  reprise de conv   reprisedeconv  run-tests.sh  scan-vault.js  tailwind.config.ts  test-morpho.html  tsconfig.json  verify-fix.js
.claude/: settings.json  settings.local.json
admin/: ADMIN_SPEC.md  next.config.ts  package.json
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
backend/: .gitignore  AUDIT_CONTRATS_COMPLET.md  Cargo.toml  FRONTEND_AUDIT_REPORT.md  IMPLEMENTATION_PLAN.md  PROTOCOL_FUNCTIONS.md  README.md  SECURITY_AUDIT.md  audit.sh  deployments-base-fork.json  deployments-localhost.json  deployments-sepolia.json  deployments.json  generate-pdf-report.sh  hardhat.config.js  package-lock.json  package.json
backend/programs/real_estate_factory/: Cargo.toml
backend/programs/real_estate_factory/src/: lib.rs
components/: ErrorFilter.tsx  (+14 more)
programs/property_contract/: Cargo.toml
programs/property_contract/src/: lib.rs
(+194 files in other folders)
