[package]
name = "real_estate_factory"
version = "0.1.0"
description = "Factory contract for creating real estate investment properties"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "real_estate_factory"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["metadata"] }
mpl-token-metadata = "5.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
